# Gnorise

./: .gitignore  README.md  action.yml  pyproject.toml
gnorise/: cli.py
gnorise/core/: auditor.py  awareness.py  cache.py  config.py  engine.py  metadata.py  scorer.py
gnorise/parsers/: lockfile.py  manifest.py
gnorise/resolver/: alias.py
gnorise/scanners/: ast_analyzer.py
