[tool.poetry]
name = "gnorise"
version = "0.1.0"
description = "A developer tool for tracking, explaining, and auditing dependencies."
authors = ["Gnorise Team"]
readme = "README.md"
packages = [{include = "gnorise"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.12.3"}
rich = "^13.7.1"
tree-sitter = ">=0.21.0,<0.22.0"
tree-sitter-languages = "^1.10.2"
pydantic = "^2.7.1"
pyyaml = "^6.0.1"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[tool.poetry.scripts]
gnorise = "gnorise.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
